chore: Remove y-overflow and height attribute on #report element to ensure that page can be exported as PDF/a screenshot of the complete page can be taken.

--- a/digital_meal/reports/static/reports/css/reports.css
+++ b/digital_meal/reports/static/reports/css/reports.css
@@ -1,7 +1,5 @@
 #report {
     text-align: center;
-    overflow-y: scroll;
-    height: 100vh;
 }
 
 #report h1,
